<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_edit_layout">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_input_address"
        android:id="@+id/textView2"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_address"
        android:background="@color/color_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/text_set_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="8dp"
            android:text="@string/text_address"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_img_address"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/edit_shape"
            android:text="@string/btn_img_address"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_set_postcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/text_zip_code"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_detail_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:hint="@string/edit_detail_address"
        android:inputType="text"
        android:textColor="@color/white"
        android:background="@drawable/edit_shape"
        android:textColorHint="@color/white"
        android:theme="@style/TextLabel"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text_payment"
            android:id="@+id/text_make_payment"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="20000원"
            android:id="@+id/text_make_price"
            android:layout_weight="1"
            android:gravity="right" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_atto_notice"
        android:id="@+id/text_make_anotice"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_deposit_account"
        android:background="@color/color_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="nnnn년 nn월 nn일까지 유효합니다."
        android:id="@+id/text_make_bnotice"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_payment_notice"
        android:id="@+id/checkBox"
        android:gravity="center_horizontal"
        android:paddingRight="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp" />

</LinearLayout>
