<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:text="@string/text_sell_management"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_footer_move_maker_nego"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/btn_footer_move_maker_nego"
            android:textColor="@color/white"
            android:layout_margin="2dp" />

        <Button
            android:id="@+id/btn_footer_move_accept_wait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_shape"
            android:gravity="center"
            android:text="@string/btn_footer_move_accept_wait"
            android:textColor="@color/white"
            android:layout_margin="2dp" />

    </LinearLayout>
</LinearLayout>