<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.atto.developers.atto.MyPageSettingActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_underline_background"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/key_maker_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/main_toolbar"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/key_maker_info"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:id="@+id/key_change_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/key_maker_info"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/text_key_change_password"
        android:textSize="@dimen/btn_text_size" />

    <TextView
        android:id="@+id/key_about_atto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/key_change_password"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="About atto"
        android:textSize="@dimen/btn_text_size" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/key_about_atto"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/key_alert_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/text_key_alert_setting"
            android:textSize="@dimen/btn_text_size" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="25dp"
            android:background="@color/color_layout"
            android:checked="false" />

    </LinearLayout>

    <TextView
        android:id="@+id/key_register_maker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/text_key_register_maker"
        android:textSize="@dimen/btn_text_size" />


    <TextView

        android:id="@+id/key_leave_atto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/key_register_maker"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/text_key_leave_atto"
        android:textSize="@dimen/btn_text_size" />


    <TextView
        android:id="@+id/key_logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/key_leave_atto"
        android:layout_marginTop="10dp"
        android:background="@color/color_layout"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/text_key_logout"
        android:textSize="@dimen/btn_text_size" />


</RelativeLayout>
