<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/color_atto_main"
    tools:context="com.atto.developers.atto.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ATTO"
        android:textColor="@color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_marginTop="36dp" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_login_id"
        android:hint="@string/edit_login_id_hint"
        android:textColorHint="@color/white"
        android:layout_marginTop="50dp" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_login_password"
        android:textColorHint="@color/white"
        android:hint="@string/edit_login_password_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="비밀번호찾기"
        android:id="@+id/text_search_password"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_marginTop="18dp" />

    <Button
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:background="@color/color_atto_sub"
        android:id="@+id/btn_local_login"
        android:layout_marginTop="18dp" />

    <Button
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="KAKAO"
        android:background="@color/color_atto_sub"
        android:id="@+id/btn_kakao_login"
        android:layout_marginTop="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp">

        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_login_signup"
            android:id="@+id/text_login_signup" />

        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_login_guest"
            android:id="@+id/text_login_guest"
            android:gravity="right" />


    </LinearLayout>







</LinearLayout>
