<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.atto.developers.atto.MyPageSettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_underline_background">
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/img_mypage_set_profile"
        android:layout_below="@+id/main_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="-75dp"
        android:src="@drawable/sample_profile" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/btn_complete_update"
        android:layout_below="@+id/btn_camera">

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_profile_nickname"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_nickname"
            android:drawablePadding="12dp"
            android:hint="@string/edit_name_hint"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="40dp"
            android:theme="@style/TextLabel"/>

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_phone_number"
            android:hint="@string/edit_phone_hint"
            android:textColorHint="@color/white"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_phone"
            android:textColor="@color/white"
            android:drawablePadding="12dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:theme="@style/TextLabel"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:gravity="center">

            <TextView
                android:paddingLeft="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_address_hint"
                android:textColor="@color/white"
                android:id="@+id/text_profile_set_address"
                android:layout_weight="2" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:background="@drawable/edit_shape"
                android:text="@string/btn_img_address"
                android:textColor="@color/color_hint"
                android:id="@+id/btn_img_address" />
        </LinearLayout>

        <TextView
            android:paddingLeft="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="우편번호"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/white"
            android:id="@+id/text_profile_set_postcode" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_detail_address"
            android:hint="@string/edit_detail_address"
            android:textColorHint="@color/white"
            android:inputType="text"
            android:textColor="@color/white"
            android:drawablePadding="12dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:theme="@style/TextLabel"/>


    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_camera"
        android:layout_alignBottom="@+id/img_mypage_set_profile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="100dp"
        android:src="@drawable/ic_camera" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_complete_update"
        android:id="@+id/btn_complete_update"
        android:background="@color/color_atto_sub_opa"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white"/>

</RelativeLayout>
