<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.atto.developers.atto.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_underline_background"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolBarStyle">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_present_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/present_password_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edit_signup_password"
            android:textColor="@color/white"
            android:theme="@style/TextLabel" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/new_password_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edit_signup_password"
            android:textColor="@color/white"
            android:theme="@style/TextLabel" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_check_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="15dp"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/check_new_password_hint"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/edit_signup_password"
            android:textColor="@color/white"
            android:theme="@style/TextLabel" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/color_atto_main_opa"
        android:text="@string/btn_password_update"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_text_size" />
</RelativeLayout>
